[workspace]
members = [
  "l11_action",
  "l12_pow2",
  "l13_sum_of_pow2s",
  "l14_n_workers",
  "l15_ctrl_c",
  "l16_n_secs",
  "l17_cancellation",
  "l18_map",
  "l19_bit",
  "l110_conveyor",
  "l111_temp_intervals",
  "l112_intersection",
  "l113_no_duplicates",
  "l114_type",
  "l115_quicksort",
  "l116_binary_search",
  "l117_counter",
  "l118_reverse",
  "l119_rev_words",
  "l120_adapter",
  "l121_big_numbers",
  "l122_vector",
  "l123_distance",
  "l124_unique_chars",
]
